Webhook for clerk

--- a/tfg/package.json
+++ b/tfg/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "4.25.1",
+    "micro": "^10.0.1",
     "mongodb": "^6.5.0",
     "next": "14.2.2",
     "react": "^18",
