--- a/tfg/package.json
+++ b/tfg/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@clerk/nextjs": "4.25.1",
+    "chart.js": "^4.4.3",
     "micro": "^10.0.1",
     "mongodb": "^6.5.0",
     "next": "14.2.2",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
   },
   "devDependencies": {
